--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -20,8 +20,8 @@ restapi:
 pod_ip: '{{ pod_ip }}'
 postgresql:
   connect_address: '{{ pod_ip }}:5432'
-  custom_conf: /var/lib/postgresql/data/postgresql-k8s-operator.conf
-  data_dir: /var/lib/postgresql/data/pgdata
+  custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
+  data_dir: {{ storage_path }}/pgdata
   listen: 0.0.0.0:5432
   pgpass: /tmp/pgpass
 use_endpoints: true
