--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -23,6 +23,10 @@ postgresql:
   custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
   data_dir: {{ storage_path }}/pgdata
   listen: 0.0.0.0:5432
+  parameters:
+    ssl: on
+    ssl_cert_file: {{ storage_path }}/server.crt
+    ssl_key_file: {{ storage_path }}/server.key
   pgpass: /tmp/pgpass
   pg_hba:
   - host all all 0.0.0.0/0 md5
