Adjustments on tests

--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -3,5 +3,5 @@
 # postgresql configuration file maintained by the postgresql-k8s-operator
 # local changes may be overwritten.
 #########################################################################################
-# synchronous_commit = '{{ synchronous_commit }}'
-# synchronous_standby_names = '{{ synchronous_standby_names }}'
+synchronous_commit = '{{ synchronous_commit }}'
+synchronous_standby_names = '{{ synchronous_standby_names }}'
