--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -9,8 +9,8 @@ bootstrap:
   - locale: en_US.UTF-8
   - data-checksums
   pg_hba:
-  - host all all 0.0.0.0/0 md5
-  - host replication replication 127.0.0.1/32 md5
+  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
+  - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
 bypass_api_service: true
 log:
   dir: /var/log/postgresql
@@ -23,12 +23,19 @@ postgresql:
   custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
   data_dir: {{ storage_path }}/pgdata
   listen: 0.0.0.0:5432
+  {%- if enable_tls %}
+  parameters:
+    ssl: on
+    ssl_ca_file: {{ storage_path }}/ca.pem
+    ssl_cert_file: {{ storage_path }}/cert.pem
+    ssl_key_file: {{ storage_path }}/key.pem
+  {%- endif %}
   pgpass: /tmp/pgpass
   pg_hba:
-  - host all all 0.0.0.0/0 md5
-  - host replication replication 127.0.0.1/32 md5
+  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
+  - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   {%- for endpoint in endpoints %}
-  - host replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
+  - {{ 'hostssl' if enable_tls else 'host' }} replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
   {%- endfor %}
   authentication:
     replication:
