--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -7,6 +7,7 @@ bootstrap:
       parameters:
         archive_command: /bin/true
         archive_mode: on
+        max_replication_slots: {{ max_wal_senders }}
         max_wal_senders: {{ max_wal_senders }}
         wal_level: logical
   initdb:
