--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -58,8 +58,8 @@ postgresql:
     replication:
       password: {{ replication_password }}
     rewind:
-      username: {{ backup_user }}
-      password: {{ backup_password }}
+      username: {{ rewind_user }}
+      password: {{ rewind_password }}
     superuser:
       password: {{ superuser_password }}
 use_endpoints: true
