Add initial backup and rewind settings (#45)
* Add initial backup settings

* Add additional backup settings

* Fix unit tests

* Add max_replication_slots

* Remove settings

* Remove settings

* Rename user

* Add test for TLS being used on pg_rewind connections

* Improve comments and docstrings

* Small fixes

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -2,6 +2,12 @@ bootstrap:
   dcs:
     postgresql:
       use_pg_rewind: true
+      remove_data_directory_on_rewind_failure: true
+      remove_data_directory_on_diverged_timelines: true
+      parameters:
+        archive_command: /bin/true
+        archive_mode: on
+        wal_level: logical
   initdb:
   - auth-host: md5
   - auth-local: trust
@@ -51,6 +57,9 @@ postgresql:
   authentication:
     replication:
       password: {{ replication_password }}
+    rewind:
+      username: {{ rewind_user }}
+      password: {{ rewind_password }}
     superuser:
       password: {{ superuser_password }}
 use_endpoints: true
