--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -1,26 +1,50 @@
 bootstrap:
-  dcs:
-    postgresql:
-      use_pg_rewind: true
-      remove_data_directory_on_rewind_failure: true
-      remove_data_directory_on_diverged_timelines: true
-      parameters:
-        archive_command: /bin/true
-        archive_mode: on
-        password_encryption: md5
-        wal_level: logical
+  {%- if restoring_backup %}
+  method: pgbackrest
+  pgbackrest:
+    command: /bin/bash -c "pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf --type=immediate restore"
+    keep_existing_recovery_conf: True
+    # no_paramas: False
+    # recovery_conf:
+    #    recovery_target_action: promote
+    #    recovery_target_timeline: latest
+    #    recovery_command: pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf archive-get %f %p
+  {% else %}
   initdb:
   - auth-host: md5
   - auth-local: trust
   - encoding: UTF8
   - locale: en_US.UTF-8
   - data-checksums
+  {%- endif %}
+  dcs:
+    postgresql:
+      use_pg_rewind: true
+      remove_data_directory_on_rewind_failure: true
+      remove_data_directory_on_diverged_timelines: true
+      parameters:
+        {%- if enable_pgbackrest %}
+        archive_command: 'pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf archive-push %p'
+        #recovery_conf:
+        #  recovery_target_timeline: latest
+        #  restore_command: 'pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf archive-get %f "%p"'
+        {% else %}
+        archive_command: /bin/true
+        {%- endif %}
+        archive_mode: on
+        log_filename: 'postgresql.log'
+        log_directory: '/var/log/postgresql'
+        logging_collector: 'on'
+        password_encryption: md5
+        wal_level: logical
   pg_hba:
+  - local all operator peer
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
 bypass_api_service: true
 log:
   dir: /var/log/postgresql
+  level: DEBUG
 restapi:
   connect_address: '{{ endpoint }}:8008'
   listen: 0.0.0.0:8008
@@ -41,20 +65,31 @@ postgresql:
   custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
   data_dir: {{ storage_path }}/pgdata
   listen: 0.0.0.0:5432
-  {%- if enable_tls %}
   parameters:
+    {%- if enable_pgbackrest %}
+    archive_command: 'pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf archive-push %p'
+    #recovery_conf:
+    #  recovery_target_timeline: latest
+    #  restore_command: 'pgbackrest --stanza={{ stanza }} --config={{ storage_path }}/pgbackrest.conf archive-get %f "%p"'
+    {% else %}
+    archive_command: /bin/true
+    {%- endif %}
+    {%- if enable_tls %}
     ssl: on
     ssl_ca_file: {{ storage_path }}/ca.pem
     ssl_cert_file: {{ storage_path }}/cert.pem
     ssl_key_file: {{ storage_path }}/key.pem
-  {%- endif %}
+    {%- endif %}
   pgpass: /tmp/pgpass
   pg_hba:
+  - local all operator peer map=operator
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   {%- for endpoint in endpoints %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
   {%- endfor %}
+  pg_ident:
+  - operator postgres operator
   authentication:
     replication:
       password: {{ replication_password }}
@@ -64,3 +99,4 @@ postgresql:
     superuser:
       password: {{ superuser_password }}
 use_endpoints: true
+use_unix_socket: true
