--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -23,7 +23,6 @@ bootstrap:
   - locale: en_US.UTF-8
   - data-checksums
   pg_hba:
-  - local all operator peer
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
 bypass_api_service: true
@@ -64,14 +63,14 @@ postgresql:
     {%- endif %}
   pgpass: /tmp/pgpass
   pg_hba:
-  - local all operator peer map=operator
+  - local all backup peer map=operator
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   {%- for endpoint in endpoints %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
   {%- endfor %}
   pg_ident:
-  - operator postgres operator
+  - operator postgres backup
   authentication:
     replication:
       password: {{ replication_password }}
