Change stanza name

--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -9,6 +9,6 @@ repo1-s3-key={{ access_key }}
 repo1-s3-key-secret={{ secret_key }}
 start-fast=y
 
-[main]
+[{{ stanza }}]
 pg1-path=/var/lib/postgresql/data/pgdata
 pg1-user={{ user }}
