pgBackRest backup action (#93)
* Initial code for backups

* Add more check on test

* Remove restore code

* Use default pgBackRest config file

* Add backup user

* Change stanza name

* Organize code

* Revert resources

* Remove log call

* Reduce log level

* Add assertion to test

* Add backups CI job

* Fix backups retention

* Fix tox backup environment

* Add check for missing required parameters

* Add limit to S3 relation

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

* Delete backups after test

* Consider s3-uri-style to make integration with Minio work

* Fix existing test

* Change tox env to use caching

* Add variables back to the CI workflow

---------

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -5,7 +5,11 @@ bootstrap:
       remove_data_directory_on_rewind_failure: true
       remove_data_directory_on_diverged_timelines: true
       parameters:
+        {%- if enable_pgbackrest %}
+        archive_command: 'pgbackrest --stanza={{ stanza }} archive-push %p'
+        {% else %}
         archive_command: /bin/true
+        {%- endif %}
         archive_mode: on
         password_encryption: md5
         wal_level: logical
@@ -41,20 +45,28 @@ postgresql:
   custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
   data_dir: {{ storage_path }}/pgdata
   listen: 0.0.0.0:5432
-  {%- if enable_tls %}
   parameters:
+    {%- if enable_pgbackrest %}
+    archive_command: 'pgbackrest --stanza={{ stanza }} archive-push %p'
+    {% else %}
+    archive_command: /bin/true
+    {%- endif %}
+    {%- if enable_tls %}
     ssl: on
     ssl_ca_file: {{ storage_path }}/ca.pem
     ssl_cert_file: {{ storage_path }}/cert.pem
     ssl_key_file: {{ storage_path }}/key.pem
-  {%- endif %}
+    {%- endif %}
   pgpass: /tmp/pgpass
   pg_hba:
+  - local all backup peer map=operator
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   {%- for endpoint in endpoints %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
   {%- endfor %}
+  pg_ident:
+  - operator postgres backup
   authentication:
     replication:
       password: {{ replication_password }}
@@ -64,3 +76,4 @@ postgresql:
     superuser:
       password: {{ superuser_password }}
 use_endpoints: true
+use_unix_socket: true
