Add backup id on restore

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -21,7 +21,7 @@ bootstrap:
   {%- if restoring_backup %}
   method: pgbackrest
   pgbackrest:
-    command: pgbackrest --stanza={{ stanza }} --type=immediate --target-action=promote restore
+    command: pgbackrest --stanza={{ stanza }} --set={{ backup_id }} --type=immediate --target-action=promote restore
     keep_data: True
     no_params: True
     keep_existing_recovery_conf: True
