--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -57,7 +57,7 @@ postgresql:
   listen: 0.0.0.0:5432
   parameters:
     {%- if enable_pgbackrest %}
-    archive_command: 'cd /var/lib/postgresql/data/pgdata && pgbackrest --stanza={{ stanza }} archive-push %p'
+    archive_command: 'pgbackrest --stanza={{ stanza }} archive-push %p'
     {% else %}
     archive_command: /bin/true
     {%- endif %}
