pgBackRest restore action (#104)
* Initial code for backups

* Add more check on test

* Remove restore code

* Use default pgBackRest config file

* Add backup user

* Change stanza name

* Organize code

* Revert resources

* Remove log call

* Reduce log level

* Add assertion to test

* Add backups CI job

* Fix backups retention

* Fix tox backup environment

* Add check for missing required parameters

* Add limit to S3 relation

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

* Delete backups after test

* Consider s3-uri-style to make integration with Minio work

* Upload backup logs to S3

* Implement restore action

* Add missing template update

* Organize flow

* Add backup id on restore

* Fix Patroni config

* Add restore failure block mechanism

* Fix lint

* Revert timeout

* Minor improvements

* Remove cd call

* Add logs

* Improvements in the status handling

* Revert test changes

* Add docstring

* Remove unnecessary remove_path call

* Remove unnecessary keep_data parameter

* Improve backups listing

* Fix backup list check and add restore call

* Change backup type on output

* Add additional check to restore test

* Fix table creation on test

* Remove unnecessary code

* Fix backup on GCS

* Turn archive mode off after restore

* Fix parameter type and unit test

* Fix integration test

---------

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -10,15 +10,23 @@ bootstrap:
         {% else %}
         archive_command: /bin/true
         {%- endif %}
-        archive_mode: on
+        archive_mode: {{ archive_mode }}
         password_encryption: md5
         wal_level: logical
+  {%- if restoring_backup %}
+  method: pgbackrest
+  pgbackrest:
+    command: pgbackrest --stanza={{ stanza }} --set={{ backup_id }} --type=immediate --target-action=promote restore
+    no_params: True
+    keep_existing_recovery_conf: True
+  {% else %}
   initdb:
   - auth-host: md5
   - auth-local: trust
   - encoding: UTF8
   - locale: en_US.UTF-8
   - data-checksums
+  {%- endif %}
   pg_hba:
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
