Initial code for backing up on replicas

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -68,7 +68,11 @@ postgresql:
   pgpass: /tmp/pgpass
   pg_hba:
   - local all backup peer map=operator
+  {%- if creating_backup %}
+  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 reject
+  {% else %}
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
+  {%- endif %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   {%- for endpoint in endpoints %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
