Implement working TLS server

--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -29,6 +29,9 @@ pg1-user={{ user }}
 {% set ns = namespace(count=2) %}
 {%- for peer_endpoint in peer_endpoints %}
 pg{{ ns.count }}-host-type=tls
+pg{{ ns.count }}-host-ca-file={{ storage_path }}/ca.pem
+pg{{ ns.count }}-host-cert-file={{ storage_path }}/cert.pem
+pg{{ ns.count }}-host-key-file={{ storage_path }}/key.pem
 pg{{ ns.count }}-host={{ peer_endpoint }}
 pg{{ ns.count }}-path={{ storage_path }}/pgdata
 pg{{ ns.count }}-user={{ user }}
