--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -4,6 +4,7 @@ bootstrap:
       use_pg_rewind: true
       remove_data_directory_on_rewind_failure: true
       remove_data_directory_on_diverged_timelines: true
+      bin_dir: /usr/lib/postgresql/{{ version }}/bin
       parameters:
         {%- if enable_pgbackrest %}
         archive_command: 'pgbackrest --stanza={{ stanza }} archive-push %p'
@@ -24,7 +25,6 @@ bootstrap:
   - auth-host: md5
   - auth-local: trust
   - encoding: UTF8
-  - locale: en_US.UTF-8
   - data-checksums
   {%- endif %}
   pg_hba:
@@ -52,6 +52,7 @@ postgresql:
   connect_address: '{{ endpoint }}:5432'
   custom_conf: {{ storage_path }}/postgresql-k8s-operator.conf
   data_dir: {{ storage_path }}/pgdata
+  bin_dir: /usr/lib/postgresql/{{ version }}/bin
   listen: 0.0.0.0:5432
   parameters:
     {%- if enable_pgbackrest %}
