--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -15,7 +15,7 @@ bootstrap:
         {% else %}
         archive_command: /bin/true
         {%- endif %}
-        archive_mode: {{ archive_mode }}
+        archive_mode: on
         log_filename: 'postgresql.log'
         log_directory: '/var/log/postgresql'
         logging_collector: 'on'
