allow socket connection for monitoring user

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -75,6 +75,7 @@ postgresql:
   pgpass: /tmp/pgpass
   pg_hba:
   - local all backup peer map=operator
+  - local all monitoring password
   {%- if not connectivity %}
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 reject
   - {{ 'hostssl' if enable_tls else 'host' }} all all {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
