--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -37,6 +37,11 @@ bootstrap:
         log_truncate_on_rotation: 'on'
         logging_collector: 'on'
         wal_level: logical
+        {%- if pg_parameters %}
+        {%- for key, value in pg_parameters.items() %}
+        {{key}} {{value}}
+        {%- endfor -%}
+        {% endif %}
   {%- if restoring_backup %}
   method: pgbackrest
   pgbackrest:
