--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -39,7 +39,7 @@ bootstrap:
         wal_level: logical
         {%- if pg_parameters %}
         {%- for key, value in pg_parameters.items() %}
-        {{key}} {{value}}
+        {{key}}: {{value}}
         {%- endfor -%}
         {% endif %}
   {%- if restoring_backup %}
