--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -8,7 +8,6 @@ bootstrap:
       remove_data_directory_on_diverged_timelines: true
       bin_dir: /usr/lib/postgresql/{{ version }}/bin
       parameters:
-        synchronous_commit: on
         synchronous_standby_names: "*"
         {%- if enable_pgbackrest %}
         archive_command: 'pgbackrest --stanza={{ stanza }} archive-push %p'
@@ -16,6 +15,10 @@ bootstrap:
         archive_command: /bin/true
         {%- endif %}
         archive_mode: on
+        autovacuum: true
+        fsync: true
+        full_page_writes: true
+        lc_messages: 'en_US.UTF8'
         log_autovacuum_min_duration: 60000
         log_checkpoints: 'on'
         log_destination: 'stderr'
@@ -93,6 +96,11 @@ postgresql:
     ssl_cert_file: {{ storage_path }}/cert.pem
     ssl_key_file: {{ storage_path }}/key.pem
     {%- endif %}
+    {%- if pg_parameters %}
+    {%- for key, value in pg_parameters.items() %}
+    {{key}}: {{value}}
+    {%- endfor -%}
+    {% endif %}
   pgpass: /tmp/pgpass
   pg_hba:
   - local all backup peer map=operator
