--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -61,6 +61,10 @@ bootstrap:
 bypass_api_service: true
 log:
   dir: /var/log/postgresql
+  dateformat: "%Y-%m-%d %H:%M:%S %Z"
+  format: "%(asctime)s [%(process)d]: %(levelname)s: %(message)s "
+  file_num: 10
+  file_size: 10240
 restapi:
   connect_address: '{{ endpoint }}:8008'
   listen: 0.0.0.0:8008
