Switch PG logs to UTC

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -33,7 +33,7 @@ bootstrap:
         log_statement_sample_rate: 1
         log_statement_stats: 'off'
         log_temp_files: 1
-        log_timezone: 'GMT'
+        log_timezone: 'UTC'
         log_truncate_on_rotation: 'on'
         logging_collector: 'on'
         wal_level: logical
