--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -93,6 +93,11 @@ postgresql:
     ssl_cert_file: {{ storage_path }}/cert.pem
     ssl_key_file: {{ storage_path }}/key.pem
     {%- endif %}
+    {%- if pg_parameters %}
+    {%- for key, value in pg_parameters.items() %}
+    {{key}}: {{value}}
+    {%- endfor -%}
+    {% endif %}
   pgpass: /tmp/pgpass
   pg_hba:
   - local all backup peer map=operator
