--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -64,7 +64,7 @@ log:
   dateformat: "%Y-%m-%d %H:%M:%S %Z"
   format: "%(asctime)s [%(process)d]: %(levelname)s: %(message)s "
   file_num: 10
-  file_size: 10240
+  file_size: 10485760
 restapi:
   connect_address: '{{ endpoint }}:8008'
   listen: 0.0.0.0:8008
