--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -63,8 +63,8 @@ log:
   dir: /var/log/postgresql
   dateformat: "%Y-%m-%d %H:%M:%S %Z"
   format: "%(asctime)s [%(process)d]: %(levelname)s: %(message)s "
-  file_num: 10
-  file_size: 10485760
+  file_num: 10080
+  file_size: 600
 restapi:
   connect_address: '{{ endpoint }}:8008'
   listen: 0.0.0.0:8008
