First support finished:
Deploy two models, each with 1x postgresql
Then, configure async replication as follows:
  $ juju switch psql-1
  $ juju offer postgresql-k8s:async-primary async-primary  # async-primary is the relation provided by the leader
  $ juju switch psql-2
  $ juju consume admin/psql-1.async-primary  # consume the primary relation
  $ juju relate postgresql-k8s:async-replica async-primary  # Both units are now related, where postgresql-k8s in model psql-2 is the standby-leader

Now, run the action:
  $ juju run -m psql-1 postgresql-k8s/0 promote-standby-cluster  # move postgresql-k8s in model psql-1 to be the leader cluster

Run the following command to check status:
  $ PATRONI_KUBERNETES_LABELS='{application: patroni, cluster-name: patroni-postgresql-k8s}' \
    PATRONI_KUBERNETES_NAMESPACE=psql-2 \  # update to model number
    PATRONI_KUBERNETES_USE_ENDPOINTS=true \
    PATRONI_NAME=postgresql-k8s-0 \
    PATRONI_REPLICATION_USERNAME=replication \
    PATRONI_SCOPE=patroni-postgresql-k8s \
    PATRONI_SUPERUSER_USERNAME=operator \
      patronictl -c /var/lib/postgresql/data/patroni.yml list

Role should be "Standby leader" and State should be "Running".

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -52,7 +52,7 @@ bootstrap:
     standby_cluster:
       host: {{ standby_cluster_endpoint }}
       port: 5432
-      create_replica_methods: ["backup_restore", "basebackup"]
+      create_replica_methods: ["basebackup"]
   {% else %}
   initdb:
   - auth-host: md5
