add ability to backups be removed after a number of days

--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -1,6 +1,6 @@
 [global]
 backup-standby=y
-repo1-retention-full=9999999
+repo1-retention-full={{ retention_full }}
 repo1-type=s3
 repo1-path={{ path }}
 repo1-s3-region={{ region }}
