set retention backup type as time

--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -1,5 +1,6 @@
 [global]
 backup-standby=y
+repo1-retention-full-type=time
 repo1-retention-full={{ retention_full }}
 repo1-type=s3
 repo1-path={{ path }}
