--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -1,6 +1,7 @@
 [global]
 backup-standby=y
-repo1-retention-full=9999999
+repo1-retention-full-type=time
+repo1-retention-full={{ retention_full }}
 repo1-retention-history=365
 repo1-type=s3
 repo1-path={{ path }}
