Added `timescaledb` plugin/extension

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -40,6 +40,7 @@ bootstrap:
         log_truncate_on_rotation: 'on'
         logging_collector: 'on'
         wal_level: logical
+        shared_preload_libraries: 'timescaledb'
         {%- if pg_parameters %}
         {%- for key, value in pg_parameters.items() %}
         {{key}}: {{value}}
