Add Patroni password

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -86,6 +86,9 @@ log:
 restapi:
   connect_address: '{{ endpoint }}:8008'
   listen: 0.0.0.0:8008
+  authentication:
+    username: patroni
+    password: {{ patroni_password }}
   {%- if enable_tls %}
   cafile: {{ storage_path }}/ca.pem
   certfile: {{ storage_path }}/cert.pem
