[DPE-5581] Timeline Management (#716)
* Timelines

* Temporarily disable failing unit tests.

* Temporarily disable failing unit tests.

* Remove redundant comment.

* Fix get current timeline connectivity error. Fix PITR integration test.

* Format.

* Improve PITR integration test stability. Fix test_restore_on_new_cluster integration test.

* Improve _was_restore_successful timeline check.

* Add automatic timeline selection with the single 'restore-to-time' parameter.

* Disable failing unit tests.

* Fix docs.

* Revert "Disable failing unit tests."

This reverts commit b5e76662b5df4feba659c1a0863e31304daa45f1.

* Revert "Temporarily disable failing unit tests."

This reverts commit 32178148b9b8f4c6d41325f82634f0b5c584be2a.

* Revert "Temporarily disable failing unit tests."

This reverts commit b4639611360886fa0081cf3a301677e65b5c2099.

* Parameter validation improvement.

* Unit tests.

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -57,6 +57,7 @@ bootstrap:
     command: >
       pgbackrest --stanza={{ restore_stanza }} --pg1-path={{ storage_path }}/pgdata
       {%- if backup_id %} --set={{ backup_id }} {%- endif %}
+      {%- if restore_timeline %} --target-timeline="0x{{ restore_timeline }}" {% endif %}
       {%- if restore_to_latest %} --type=default {%- else %}
       --target-action=promote {%- if pitr_target %} --target="{{ pitr_target }}" --type=time {%- else %} --type=immediate {%- endif %}
       {%- endif %}
