Logical replication: sync from VM PR.

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -52,6 +52,16 @@ bootstrap:
         {{key}}: {{value}}
         {%- endfor -%}
         {% endif %}
+    {%- if slots %}
+    slots:
+    {%- for slot, database in slots.items() %}
+      {{slot}}:
+        database: {{database}}
+        plugin: pgoutput
+        type: logical
+    {%- endfor -%}
+    {% endif %}
+
   {%- if restoring_backup %}
   method: pgbackrest
   pgbackrest:
