Change paths in code
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -51,7 +51,7 @@ bootstrap:
   method: pgbackrest
   pgbackrest:
     command: >
-      pgbackrest --stanza={{ restore_stanza }} --pg1-path={{ storage_path }}/pgdata
+      pgbackrest --stanza={{ restore_stanza }} --pg1-path={{ storage_path }}
       {%- if backup_id %} --set={{ backup_id }} {%- endif %}
       {%- if restore_timeline %} --target-timeline="0x{{ restore_timeline }}" {% endif %}
       {%- if restore_to_latest %} --type=default {%- else %}
