[DPE-6899] User->databases pg_hba rules (#919)
* List accessible databases for each relation user

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Improve retrieval of relation users

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Upgrade groups from users created by PgBouncer

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Change pg_hba to match the user->databases map

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Update Patroni configuration when user is added/removed

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Update config after user creation/deletion also on replicas

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Update Patroni configuration when user is added/removed through db and db-admin relations

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Create event trigger to monitor user creation by Pgbouncer

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Handle user creation/deletion through PgBouncer correctly

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Use right connection type

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix lint

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix unit tests

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix audit test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix first new relations test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix TLS and restart tests

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fixes for async replication

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix unit test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix backup tests

Signed-off-

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -133,14 +133,19 @@ postgresql:
   - local all backup peer map=operator
   - local all monitoring password
   {%- if not connectivity %}
-  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 reject
   - {{ 'hostssl' if enable_tls else 'host' }} all all {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
+  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 reject
   {%- elif enable_ldap %}
   - {{ 'hostssl' if enable_tls else 'host' }} all +identity_access 0.0.0.0/0 ldap {{ ldap_parameters }}
   - {{ 'hostssl' if enable_tls else 'host' }} all +internal_access 0.0.0.0/0 md5
-  - {{ 'hostssl' if enable_tls else 'host' }} all +relation_access 0.0.0.0/0 md5
+  {%- for user, databases in user_databases_map.items() %}
+  - {{ 'hostssl' if enable_tls else 'host' }} {{ databases }} {{ user }} 0.0.0.0/0 md5
+  {%- endfor %}
   {%- else %}
-  - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 md5
+  - {{ 'hostssl' if enable_tls else 'host' }} all +internal_access 0.0.0.0/0 md5
+  {%- for user, databases in user_databases_map.items() %}
+  - {{ 'hostssl' if enable_tls else 'host' }} {{ databases }} {{ user }} 0.0.0.0/0 md5
+  {%- endfor %}
   {%- endif %}
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.1/32 md5
   - {{ 'hostssl' if enable_tls else 'host' }} replication replication 127.0.0.6/32 md5
