Set Pgbackrest spool dir to archive mount

--- a/templates/pgbackrest.conf.j2
+++ b/templates/pgbackrest.conf.j2
@@ -1,6 +1,7 @@
 [global]
 backup-standby=y
 compress-type=zst
+spool-path={{ archive_path }}
 repo1-retention-full-type=time
 repo1-retention-full={{ retention_full }}
 repo1-retention-history=365
