Add HBA rules for instance-level predefined roles
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/templates/patroni.yml.j2
+++ b/templates/patroni.yml.j2
@@ -154,6 +154,13 @@ postgresql:
   pg_hba:
   - local all backup peer map=operator
   - local all monitoring password
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_stats 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_read 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_dml 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_backup 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_dba 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_admin 0.0.0.0/0 scram-sha-256
+  - {{ 'hostssl' if enable_tls else 'host' }} all +charmed_databases_owner 0.0.0.0/0 scram-sha-256
   {%- if not connectivity %}
   - {{ 'hostssl' if enable_tls else 'host' }} all all {{ endpoint }}.{{ namespace }}.svc.cluster.local md5
   - {{ 'hostssl' if enable_tls else 'host' }} all all 0.0.0.0/0 reject
